syntax = "proto3";
option go_package = "proto/accommodation";
//option csharp_namespace = "AccommodationService";

service AccommodationServiceRPC {
	rpc DeleteAllForHost(DeleteAllForHostRequest) returns (DeleteAllForHostResponse);
	rpc CreateAccommodation(CreateAccommodationRequest) returns (CreateAccommodationResponse);
	rpc ModifyAccommodation(ModifyAccommodationRequest) returns (ModifyAccommodationResponse);
	rpc SearchAcommodations(SearchAcommodationsRequest) returns (SearchAcommodationsResponse);
	rpc GetAccommodation (GetAccommodationRequest) returns (GetAccommodationResponse);
	rpc SetReservationOption (SetReservationOptionRequest) returns (SetReservationOptionResponse);
	rpc GetAllAccommodations (GetAllRequest) returns (GetAllResponse);
}

message Address {
  string id = 1;
  string country = 2;
  string city = 3;
  string streetAddress = 4;
}

enum PaymentOption {
  PER_PERSON = 0;
  PER_UNIT = 1;
}

message Accommodation{
 string id = 1;
 string hostId = 2;
 string name = 3;
 Address address = 4;
 repeated string benefits = 5;
 repeated string pictures = 6;
 int32 minGuests = 7;
 int32 maxGuests = 8;
 int32 price = 9;
 PaymentOption paymentOption = 10;
}

message AccommodationRequest{
  string hostId = 1;
  string name = 2;
  Address address = 3;
  repeated string benefits = 4;
  repeated string pictures = 5;
  int32 minGuests = 6;
  int32 maxGuests = 7;
  int32 price = 8;
  PaymentOption paymentOption = 9;
}

message DeleteAllForHostRequest{
  string hostId = 1;
}

message DeleteAllForHostResponse{
  string response = 1;
}

message CreateAccommodationRequest{
 AccommodationRequest request = 1;
}

message CreateAccommodationResponse{
 string response = 1;
}

message ModifyAccommodationRequest{
 Accommodation accommodation = 1;
}

message ModifyAccommodationResponse{
 string response = 1;
}

message SearchAcommodationsRequest{
 string criteria = 1;
 string content = 2;
}

message SearchAcommodationsResponse{
 repeated Accommodation accommodations = 1;
}

message GetAccommodationRequest{
 string id = 1;
}

message GetAccommodationResponse{
 Accommodation accommodation = 1;
}

message SetReservationOptionRequest{
 string option = 1;
}

message SetReservationOptionResponse{
 string response = 1;
}

message GetAllRequest {}

message GetAllResponse {
  repeated Accommodation accommodations = 1;
}